API : carte over

--- a/ressources/layout/header.ejs
+++ b/ressources/layout/header.ejs
@@ -1,15 +1,16 @@
 
-<body>
+<body id="app">
 
 	<!-- Mettre header : barre en haut de l'ecran -->
 	<div class="w3-bar w3-light-green w3-top">
 
-		<a href="#" class="w3-bar-item w3-button"> Magic Place </a>
-		<a href="#" class="w3-bar-item w3-button w3-hide-small">Log-in</a>
-		<a href="#" class="w3-bar-item w3-button w3-hide-small">Sign in</a>
-		<a href="#" class="w3-bar-item w3-button w3-hide-small">Search</a>
-		<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="showLinks()"> &#9776; </a>
-
+		<div id="big-screen">
+			<a href="#" class="w3-bar-item w3-button"> Magic Place </a>
+			<a href="#" class="w3-bar-item w3-button w3-hide-small">Log-in</a>
+			<a href="#" class="w3-bar-item w3-button w3-hide-small">Sign in</a>
+			<a href="#" class="w3-bar-item w3-button w3-hide-small">Search</a>
+			<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="showLinks()"> &#9776; </a>
+		</div>
 
 		<div id="small-screen" class="w3-bar-block w3-light-green w3-hide w3-hide-large w3-hide-medium">
 			<a href="#" class="w3-bar-item w3-button">Log-in</a>
