--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -1,9 +1,20 @@
 
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 
-    <%- vue %>
 
-  </body>
+<div class="w3-container w3-bar w3-light-green">
+	
+	<p>Some footer Notes</p>
+
+</div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+
+<%- vue %>
+
+</body>
 </html>
