--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -2,14 +2,43 @@
 <%- include('../layout/head') %>
 <%- include('../layout/header') %>
 
-    <div id="app">
+<div class="w3-container">
 
-  	  <div class="w3-container">
+	<div class="w3-container w3-center w3-border-bottom">
 
-        <h1> Welcome to Magic-Project v0 </h1>
+		<h2>Magic-Project v1 </h2>
+		
+		<p>
+			Ici, vous pouvez naviguer parmi des cartes de MTG, le jeu de carte à collectionner.
+		</p>
 
-      </div>
+		<p>
+			En vous connectant, vous pourrez indiquer que vous aimez certaines cartes, commenter, et voir la popularite de chaque carte !
+		</p>
 
-    </div>
+	</div>
+
+	<div class="w3-container w3-center w3-border-bottom">
+
+		<h3>Previews de Cartes</h3>
+
+		<div class="w3-row">
+
+			<carte-preview class="w3-col s6 m4 l3" v-for="carte in cartes_preview"> </carte-preview> 
+
+		</div>
+
+	</div>
+
+	<div class="w3-container w3-center w3-margin-bottom">
+
+		<h3>Inscrivez vous maintenant !</h3>
+
+		<a href="/login"> <button class="w3-button w3-light-green">S'inscrire</button> </a>
+
+	</div>
+
+
+</div>
 
 <%- include('../layout/foot',{vue: vue}) %>
