--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -24,7 +24,7 @@
 
 		<div class="w3-row">
 
-			<carte-preview class="w3-col s6 m4 l3" v-for="carte in cartes_preview"> </carte-preview> 
+			<carte-preview class="w3-col s6 m4 l3" v-for="carte in cartes_preview" :key="carte.var_id"> </carte-preview> 
 
 		</div>
 
