--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -34,7 +34,7 @@
 
 		<h3>Inscrivez vous maintenant !</h3>
 
-		<a href="/login"> <button class="w3-button w3-light-green">S'inscrire</button> </a>
+		<a href="/login"> <button type="button" class="w3-button w3-light-green">S'inscrire</button> </a>
 
 	</div>
 
