--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -2,8 +2,9 @@
 
 
 
+<br><br><br>
 
-<div class="w3-container w3-bar w3-light-green">
+<div class="w3-container w3-bar w3-light-green w3-bottom">
 	
 	<p>Some footer Notes</p>
 
