--- a/ressources/login/index.ejs
+++ b/ressources/login/index.ejs
@@ -19,7 +19,7 @@
 			
 
 			<label name="pass">Mot de passe</label>
-			<input class="w3-input w3-border w3-round-large" type="text" name="pass">		
+			<input class="w3-input w3-border w3-round-large" type="password" name="pass">		
 
 			<input type="submit" class="w3-button w3-light-green" value="Valider">
 
