--- a/ressources/login/log_form.ejs
+++ b/ressources/login/log_form.ejs
@@ -23,7 +23,6 @@
 
 			<input type="submit" class="w3-button w3-light-green" value="Valider">
 
-
 		</form>
 
 	</div>
@@ -32,6 +31,12 @@
 		CENTER
 	</div>
 
+
+</div>
+
+<div class="w3-container">
+	
+	<p>Pas de compte ? <a href="/login/signin">Inscrivez-vous !</a></p>
 
 </div>
 
