--- a/ressources/login/log_form.ejs
+++ b/ressources/login/log_form.ejs
@@ -2,6 +2,16 @@
 <%- include('../layout/head') %>
 <%- include('../layout/header') %>
 
+<% if(message) {%>
+<div class="w3-panel w3-light-red">
+	<h2>Erreur</h2>
+
+	<p> Cette identifiant / mot de passe est erroné</p>
+
+</div>
+
+<%}%>
+
 <div class="w3-container w3-row ">
 
 	<div class="w3-col m2 l3" style="visibility: hidden">
@@ -34,7 +44,7 @@
 
 </div>
 
-<div class="w3-container">
+<div class="w3-container w3-center">
 	
 	<p>Pas de compte ? <a href="/login/signin">Inscrivez-vous !</a></p>
 
