--- a/ressources/login/log_form.ejs
+++ b/ressources/login/log_form.ejs
@@ -3,7 +3,9 @@
 <%- include('../layout/header') %>
 
 <% if(message) {%>
-<div class="w3-panel w3-light-red">
+
+<div class="w3-panel w3-light-red w3-center">
+
 	<h2>Erreur</h2>
 
 	<p> Cette identifiant / mot de passe est erroné</p>
