--- a/ressources/layout/header.ejs
+++ b/ressources/layout/header.ejs
@@ -19,9 +19,9 @@
 		<div class="w3-bar w3-light-green w3-top">
 
 			<div id="big-screen">
-				<a href="#" class="w3-bar-item w3-button"> Magic Place </a>
-				<a href="#" class="w3-bar-item w3-button w3-hide-small">Log-in</a>
-				<a href="#" class="w3-bar-item w3-button w3-hide-small">Sign in</a>
+				<a href="/" class="w3-bar-item w3-button"> Magic Place </a>
+				<a href="/login/login" class="w3-bar-item w3-button w3-hide-small">Log-in</a>
+				<a href="/login/signin" class="w3-bar-item w3-button w3-hide-small">Sign in</a>
 				<a href="#" class="w3-bar-item w3-button w3-hide-small">Search</a>
 				<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="showLinks()"> &#9776; </a>
 			</div>
