--- a/ressources/login/log_form.ejs
+++ b/ressources/login/log_form.ejs
@@ -27,11 +27,11 @@
 		<form action="/login/login" method="post">
 			
 			<label name="user_name">Nom d'utilisateur</label>
-			<input class="w3-input w3-border w3-round-large" type="text" name="user_name">
+			<input class="w3-input w3-border w3-round-large" type="text" name="user_name" required>
 			
 
 			<label name="pass">Mot de passe</label>
-			<input class="w3-input w3-border w3-round-large" type="password" name="pass">		
+			<input class="w3-input w3-border w3-round-large" type="password" name="pass" required>		
 
 			<input type="submit" class="w3-button w3-light-green" value="Valider">
 
