--- a/ressources/login/sign_form.ejs
+++ b/ressources/login/sign_form.ejs
@@ -1,5 +1,5 @@
 
-<%- include('../layout/head') %>
+<%- include('../layout/head' ) %>
 <%- include('../layout/header') %>
 
 <% if(message) {%>
@@ -57,8 +57,8 @@
 
 <div class="w3-container w3-center">
 	
-	<p>Deja inscrit ? <a href="/login/signin">Log in !</a></p>
+	<p>Deja inscrit ? <a href="/login/login">Log in !</a></p>
 
 </div>
 
-<%- include('../layout/foot',{vue: vue}) %>
+<%- include('../layout/foot',{vue: ''}) %>
