--- a/ressources/login/log_form.ejs
+++ b/ressources/login/log_form.ejs
@@ -2,17 +2,6 @@
 <%- include('../layout/head') %>
 <%- include('../layout/header') %>
 
-<% if(message) {%>
-
-<div class="w3-panel w3-pale-red w3-center">
-
-	<h2>Erreur</h2>
-
-	<p> Cette identifiant / mot de passe est erroné</p>
-
-</div>
-
-<%}%>
 
 <div class="w3-container w3-row ">
 
@@ -23,6 +12,14 @@
 	<div class="w3-container w3-center w3-col s12 m8 l6">
 
 		<h2>Log In </h2>
+
+<% if(message) {%>
+
+		<div class="w3-panel w3-pale-red">
+			<p>Ce couple utilisateur / mot de passe n'existent pas, veuillez reessayer</p>
+		</div>
+
+<% } %>
 
 		<form action="/login/login" method="post" name="Log">
 			
