--- a/ressources/layout/header_logged.ejs
+++ b/ressources/layout/header_logged.ejs
@@ -20,15 +20,14 @@
 
 			<div id="big-screen">
 				<a href="/" class="w3-bar-item w3-button"> Magic Place </a>
-				<a href="/login/login" class="w3-bar-item w3-button w3-hide-small">Log-in</a>
-				<a href="/login/signin" class="w3-bar-item w3-button w3-hide-small">Sign in</a>
-				
+				<a href="/login/logout" class="w3-bar-item w3-button w3-hide-small">Log Out</a>
+				<a href="/user" class="w3-bar-item w3-button w3-hide-small">Home Page</a>
 				<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="showLinks()"> &#9776; </a>
 			</div>
 
 			<div id="small-screen" class="w3-bar-block w3-light-green w3-hide w3-hide-large w3-hide-medium">
-				<a href="/login/login" class="w3-bar-item w3-button">Log-in</a>
-				<a href="/login/signin" class="w3-bar-item w3-button">Sign in</a>
+				<a href="/login/logout" class="w3-bar-item w3-button ">Log Out</a>
+				<a href="/user" class="w3-bar-item w3-button ">Home Page</a>
 			</div>
 
 		</div>
