api comment full

--- a/ressources/login/sign_form.ejs
+++ b/ressources/login/sign_form.ejs
@@ -18,6 +18,7 @@
 		<div class="w3-panel w3-pale-red" >
 			<p>Les mots de passe doivent correspondre</p>
 			<p>Les mots de passe doivent faire plus de 10 characteres</p>
+			<p>Le nom d'utilisateur ne doit pas etre pris</p>
 		</div>
 
 <% } %>
