--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -1,10 +1,6 @@
 
 
-
-
-<br><br><br>
-
-<div class="w3-container w3-bar w3-light-green w3-bottom">
+<div class="w3-container w3-bar w3-light-green w3-bottom w3-margin-top">
 	
 	<p>Some footer Notes</p>
 
