--- a/ressources/layout/header.ejs
+++ b/ressources/layout/header.ejs
@@ -16,7 +16,7 @@
 	
 	<div id="app">
 		<!-- Mettre header : barre en haut de l'ecran -->
-		<div class="w3-bar w3-light-green w3-top">
+		<div class="w3-bar w3-light-green w3-top w3-margin-bottom">
 
 			<div id="big-screen">
 				<a href="/" class="w3-bar-item w3-button"> Magic Place </a>
@@ -32,7 +32,5 @@
 			</div>
 
 		</div>
-
-		<br><br>
 
 	<!-- Fin Nav bar : a faire en sorte qu'elle dependent de l'app -->
