api comment full

--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="w3-container w3-bar w3-light-green w3-bottom w3-margin-top">
+<div class="w3-container w3-bar w3-light-green w3-bottom">
 	
 	<p>Some footer Notes</p>
 
