--- a/ressources/layout/header.ejs
+++ b/ressources/layout/header.ejs
@@ -14,9 +14,9 @@
 
 	</script>
 	
-	<div id="app">
+	<div id="app" class="w3-margin-top w3-margin-bottom">
 		<!-- Mettre header : barre en haut de l'ecran -->
-		<div class="w3-bar w3-light-green w3-top w3-margin-bottom">
+		<div class="w3-bar w3-light-green w3-top">
 
 			<div id="big-screen">
 				<a href="/" class="w3-bar-item w3-button"> Magic Place </a>
