--- a/ressources/layout/header_logged.ejs
+++ b/ressources/layout/header_logged.ejs
@@ -14,7 +14,7 @@
 
 	</script>
 	
-	<div id="app">
+	<div id="app" class="w3-margin-top w3-margin-bottom">
 		<!-- Mettre header : barre en haut de l'ecran -->
 		<div class="w3-bar w3-light-green w3-top">
 
@@ -31,7 +31,5 @@
 			</div>
 
 		</div>
-
-		<br><br>
 
 	<!-- Fin Nav bar : a faire en sorte qu'elle dependent de l'app -->
