--- a/ressources/layout/header_logged.ejs
+++ b/ressources/layout/header_logged.ejs
@@ -14,7 +14,7 @@
 
 	</script>
 	
-	<div id="app" class="w3-margin-top w3-margin-bottom">
+	<div id="app" style="margin-top:35px;margin-bottom:50px">
 		<!-- Mettre header : barre en haut de l'ecran -->
 		<div class="w3-bar w3-light-green w3-top">
 
