Fini api of crud

--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -1,10 +1,14 @@
 
 
-<div class="w3-container w3-bar w3-light-green w3-bottom">
+<div class="w3-container w3-bar w3-light-green w3-bottom w3-row">
 	
-	<p>Some footer Notes</p>
+	<div class="w3-col s6">
+		<p>Some footer infos</p>
+	</div>
 
-	<a><p></p></a>
+	<div class="w3-col s6 w3-right-align">
+		<p><a href="/">Supprimer compte</a></p>
+	</div>
 
 </div>
 
