--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -2,7 +2,11 @@
 <%- include('../layout/head') %>
 <%- include('../layout/header') %>
 
-<div class="w3-container">
+<div class="w3-col m2 l3" style="visibility: hidden">
+	LEFT
+</div>
+
+<div class="w3-container w3-center w3-col s12 m8 l6">
 
 	<div class="w3-container w3-center w3-border-bottom">
 
@@ -41,4 +45,8 @@
 
 </div>
 
-<%- include('../layout/foot',{vue: vue}) %>
+<div class="w3-col m2 l3" style="visibility: hidden">
+	RIGHT
+</div>
+
+<%- include('../layout/foot',{vue: vue, logged: false}) %>
