--- a/ressources/login/sign_form.ejs
+++ b/ressources/login/sign_form.ejs
@@ -6,7 +6,7 @@
 <div class="w3-container w3-row ">
 
 	<div class="w3-col m2 l3" style="visibility: hidden">
-		CENTER
+		LEFT
 	</div>
 
 	<div class="w3-container w3-center w3-col s12 m8 l6">
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="w3-col m2 l3" style="visibility: hidden">
-		CENTER
+		RIGHT
 	</div>
 
 
@@ -56,4 +56,4 @@
 
 </div>
 
-<%- include('../layout/foot',{vue: ''}) %>
+<%- include('../layout/foot',{vue: vue, logged: false}) %>
