--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -2,11 +2,7 @@
 <%- include('../layout/head') %>
 <%- include('../layout/header') %>
 
-<div class="w3-col m2 l3" style="visibility: hidden">
-	LEFT
-</div>
-
-<div class="w3-container w3-center w3-col s12 m8 l6">
+<div class="w3-container w3-center">
 
 	<div class="w3-container w3-center w3-border-bottom">
 
@@ -43,10 +39,6 @@
 	</div>
 
 
-</div>
-
-<div class="w3-col m2 l3" style="visibility: hidden">
-	RIGHT
 </div>
 
 <%- include('../layout/foot',{vue: vue, logged: false}) %>
