Fini api of crud

--- a/ressources/accueil/signed.ejs
+++ b/ressources/accueil/signed.ejs
@@ -44,7 +44,7 @@
 
 		<div class="w3-row">
 
-			<comment-preview class="w3-col s12" v-for="repl in reply_preview" :key="repl.comment_id" @liked='liked_comm' @disliked='disliked_comm' :comm="repl"> </comment-preview> 
+			<comment-preview class="w3-col s12" v-for="repl in replys_preview" :key="repl.comment_id" @liked='liked_comm' @disliked='disliked_comm' :comm="repl"> </comment-preview> 
 
 		</div>
 
