Fini api of crud

--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -6,12 +6,14 @@
 		<p>Some footer infos</p>
 	</div>
 
-<% if (logged) {%>
+<% if (logged == true) {%>
 
 	<div class="w3-col s6 w3-right-align">
 		<p><a href="/api/users/delete/">Supprimer compte</a></p>
 	</div>
+
 <%}%>
+
 </div>
 
 </div>
