Fini api of crud

--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -4,7 +4,7 @@
 
 <div class="w3-container w3-center">
 
-	<div class="w3-container w3-center w3-border-bottom">
+	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
 
 		<h2>Magic-Project v1 </h2>
 		
@@ -18,7 +18,7 @@
 
 	</div>
 
-	<div class="w3-container w3-center w3-border-bottom">
+	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
 
 		<h3>Previews de Cartes</h3>
 
