--- a/ressources/accueil/signed.ejs
+++ b/ressources/accueil/signed.ejs
@@ -14,7 +14,7 @@
 
 	</div>
 
-	<div class="w3-container w3-center w3-border-bottom">
+	<div class="w3-container w3-center w3-border-bottom  w3-margin-bottom">
 
 		<h3>Cartes au Top</h3>
 
@@ -26,7 +26,7 @@
 
 	</div>
 
-	<div class="w3-container w3-center w3-border-bottom">
+	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
 
 		<h3>Commentaires au Top</h3>
 
@@ -38,7 +38,7 @@
 
 	</div>
 
-	<div class="w3-container w3-center w3-border-bottom">
+	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
 
 		<h3> Meilleures reponses à vos commentaires </h3>
 
