--- a/ressources/accueil/signed.ejs
+++ b/ressources/accueil/signed.ejs
@@ -28,18 +28,6 @@
 
 	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
 
-		<h3>Commentaires au Top</h3>
-
-		<div class="w3-row">
-
-			<comment-preview class="w3-col s12" v-for="comm in comments_preview" :key="comm.comment_id" @liked='liked_comm(comm)' @disliked='disliked_comm(comm)' :comm="comm"> </comment-preview>
-
-		</div>
-
-	</div>
-
-	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
-
 		<h3> Meilleures reponses à vos commentaires </h3>
 
 		<div class="w3-row">
@@ -47,6 +35,32 @@
 			<comment-preview class="w3-col s12" v-for="repl in replys_preview" :key="repl.comment_id" @liked='liked_comm(repl)' @disliked='disliked_comm(repl)' :comm="repl"> </comment-preview> 
 
 			<p v-if="replys_preview.length==0">Il n'y a pas encore de reponses a un commentaire que vous avez posté</p>
+
+		</div>
+
+	</div>
+
+	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
+
+		<h3>Vos meilleurs commentaires</h3>
+
+		<div class="w3-row">
+
+			<comment-preview class="w3-col s12" v-for="comm in perso_comments_preview" :key="comm.comment_id" @liked='liked_comm(comm)' @disliked='disliked_comm(comm)' :comm="comm"> </comment-preview>
+
+			<p v-if="perso_comments_preview.length==0">Il n'y a pas encore de reponses a un commentaire que vous avez posté</p>
+
+		</div>
+
+	</div>
+
+	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
+
+		<h3>Commentaires au Top</h3>
+
+		<div class="w3-row">
+
+			<comment-preview class="w3-col s12" v-for="comm in comments_preview" :key="comm.comment_id" @liked='liked_comm(comm)' @disliked='disliked_comm(comm)' :comm="comm"> </comment-preview>
 
 		</div>
 
