--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -9,7 +9,7 @@
 <% if (logged == true) {%>
 
 	<div class="w3-col s6 w3-right-align">
-		<p><a href="/api/users/delete/">Supprimer compte</a></p>
+		<p><a href="/api/users/delete/">Supprimer votre compte (cette action est irreversible)</a></p>
 	</div>
 
 <%}%>
