--- a/ressources/accueil/signed.ejs
+++ b/ressources/accueil/signed.ejs
@@ -60,7 +60,7 @@
 
 	</div>
 
-	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
+	<div class="w3-container w3-center w3-margin-bottom">
 
 		<h3>Commentaires au Top</h3>
 
