--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -3,7 +3,7 @@
 <div class="w3-container w3-bar w3-light-green w3-bottom w3-row">
 	
 	<div class="w3-col s6">
-		<p>Some footer infos</p>
+		<a href="/"><p>Magic-Project</p></a>
 	</div>
 
 <% if (logged == true) {%>
