--- a/ressources/users/home.ejs
+++ b/ressources/users/home.ejs
@@ -16,7 +16,7 @@
 
 	</div>
 
-	<button v-if="cartes_preview.length!=0" class="w3-button w3-btn w3-border" @click="fetch_carte">Plus de cartes</button>
+	<button v-if="cartes_preview.length!=0" class="w3-button w3-btn w3-border" @click="fetch_cartes">Plus de cartes</button>
 
 </div>
 
