--- a/ressources/accueil/signed.ejs
+++ b/ressources/accueil/signed.ejs
@@ -2,7 +2,7 @@
 <%- include('../layout/head') %>
 <%- include('../layout/header_logged') %>
 
-
+<span id="id_user" style="visibility: hidden"><%=id%></span>
 
 <div class="w3-container w3-center">
 
@@ -10,7 +10,7 @@
 
 		<h2> Magic-Project v1 </h2>
 
-		<p> Bienvenue, <%= name %> </p>
+		<p> Bienvenue, {{name}} </p>
 
 	</div>
 
