--- a/ressources/layout/header_logged.ejs
+++ b/ressources/layout/header_logged.ejs
@@ -19,7 +19,7 @@
 		<div class="w3-bar w3-light-green w3-top">
 
 			<div id="big-screen">
-				<a href="/" class="w3-bar-item w3-button"> Magic Place </a>
+				<a href="/" class="w3-bar-item w3-button"> Magic Project </a>
 				<a href="/login/logout" class="w3-bar-item w3-button w3-hide-small">Log Out</a>
 				<a href="/user" class="w3-bar-item w3-button w3-hide-small">Home Page</a>
 				
