--- a/ressources/carte/show_carte.ejs
+++ b/ressources/carte/show_carte.ejs
@@ -29,7 +29,7 @@
 
 				<p> {{carte.edition_name}} </p>
 
-				<p><a :href="carte.gathURL">Gatherer</a>, <a href="carte.scryURL">ScryFall</a></p>
+				<p><a :href="carte.gathURL">Gatherer</a>, <a :href="carte.scryURL">ScryFall</a></p>
 				
 			</div>			
 
