--- a/ressources/carte/show_carte.ejs
+++ b/ressources/carte/show_carte.ejs
@@ -12,7 +12,7 @@
 		<div class="w3-row">
 
 			<div class="w3-col s12 m6 l4">
-				<img :src="carte.imgURL">
+				<img :src="carte.imgURL" class="w3-image">
 			</div>
 
 			<div class="w3-col s12 m6 l8">
