--- a/ressources/carte/show_carte.ejs
+++ b/ressources/carte/show_carte.ejs
@@ -74,7 +74,7 @@
 
 		<div class="w3-row">
 
-			<comment class="w3-col s12" v-for="comm in comments_preview" :key="comm.comment_id" @liked='liked_comm(comm)' @disliked='disliked_comm(comm)' :comm="comm" :userId="user_id"> </comment>
+			<comment class="w3-col s12" v-for="comm in comments_preview" :key="comm.comment_id" @liked='liked_comm(comm)' @disliked='disliked_comm(comm)' :comm="comm" :user_id="user_id"> </comment>
 
 			<button class="w3-button w3-btn w3-border" @click="fetch_comm">Plus de commentaires</button>
 
