Carte plus debug

--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -9,7 +9,7 @@
 <% if (logged == true) {%>
 
 	<div class="w3-col s6 w3-right-align">
-		<p><a href="/api/users/delete/" alt="Cette action est irreversible">Supprimer votre compte</a></p>
+		<p><a href="#" alt="Cette action est irreversible" @click="supprimerCompte()">Supprimer votre compte</a></p>
 	</div>
 
 <%}%>
