Carte plus debug

--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -9,7 +9,7 @@
 <% if (logged == true) {%>
 
 	<div class="w3-col s6 w3-right-align">
-		<p @click="supprimerCompte()"><a>Supprimer votre compte</a></p>
+		<p @click="supprimerCompte()"><a href="#">Supprimer votre compte</a></p>
 	</div>
 
 <%}%>
