Carte plus debug

--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -6,13 +6,13 @@
 		<a href="/"><p>Magic-Project</p></a>
 	</div>
 
-<% if (logged == true) {%>
+	<% if (logged == true) {%>
 
 	<div class="w3-col s6 w3-right-align">
-	<a href="/"> <p @click="supprimerCompte()"> Supprimer votre compte </p> </a> 
+		<a href="#"> <p @click="supprimerCompte()"> Supprimer votre compte </p> </a> 
 	</div>
 
-<%}%>
+	<%}%>
 
 </div>
 
