Carte plus debug

--- a/ressources/layout/header_logged.ejs
+++ b/ressources/layout/header_logged.ejs
@@ -20,15 +20,17 @@
 
 			<div id="big-screen">
 				<a href="/" class="w3-bar-item w3-button"> Magic Project </a>
-				<a href="/login/logout" class="w3-bar-item w3-button w3-hide-small">Log Out</a>
+				<a href="/carte" class="w3-bar-item w3-button w3-hide-small">Toutes les cartes</a>
 				<a href="/user" class="w3-bar-item w3-button w3-hide-small">Home Page</a>
+				<a href="/login/logout" class="w3-bar-item w3-button w3-hide-small">Log Out</a>
 				
 				<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="showLinks()"> &#9776; </a>
 			</div>
 
 			<div id="small-screen" class="w3-bar-block w3-light-green w3-hide w3-hide-large w3-hide-medium">
-				<a href="/login/logout" class="w3-bar-item w3-button ">Log Out</a>
+				<a href="/carte" class="w3-bar-item w3-button ">Toutes les cartes</a>
 				<a href="/user" class="w3-bar-item w3-button ">Home Page</a>
+				<a href="/login/logout" class="w3-bar-item w3-button ">Log Out</a>
 			</div>
 
 		</div>
