unity in color design

--- a/ressources/carte/show_carte.ejs
+++ b/ressources/carte/show_carte.ejs
@@ -44,9 +44,9 @@
 
 			<div>
 
-				<button @click="like()" class="w3-button w3-btn w3-border"> Like </button>
+				<button @click="like()" class="w3-button w3-btn w3-border w3-light-blue"> Like </button>
 
-				<button @click="dislike()" class="w3-button w3-btn w3-border"> Dislike </button>
+				<button @click="dislike()" class="w3-button w3-btn w3-border w3-pale-red"> Dislike </button>
 
 			</div>
 
