unity in color design

--- a/ressources/accueil/index.ejs
+++ b/ressources/accueil/index.ejs
@@ -6,7 +6,7 @@
 
 	<div class="w3-container w3-center w3-border-bottom w3-margin-bottom">
 
-		<h2>Magic-Project v1 </h2>
+		<h2>Magic-Project</h2>
 		
 		<p>
 			Ici, vous pouvez naviguer parmi des cartes de MTG, le jeu de carte à collectionner.
