unity in color design

--- a/ressources/carte/template_type.ejs
+++ b/ressources/carte/template_type.ejs
@@ -13,7 +13,7 @@
 
 		<h2>Creer une carte Modele </h2>
 
-		<form action="/carte/modele" method="post" name="carte" id="carte">
+		<form action="/api/carte/modele" method="post" name="carte" id="carte">
 			
 			<label name="carte_name">Nom de la carte</label>
 			<input class="w3-input w3-border w3-round-large" type="text" name="carte_name" required>
