unity in color design

--- a/ressources/carte/template_type.ejs
+++ b/ressources/carte/template_type.ejs
@@ -22,7 +22,7 @@
 			<textarea class="w3-input w3-border w3-round-large" name="oracle" form="carte"></textarea> 
 			
 			<label name="mana_cost">Cout de mana</label>
-			<input class="w3-input w3-border w3-round-large" type="text" name="mana_cost" required>
+			<input class="w3-input w3-border w3-round-large" type="text" name="mana_cost" >
 			
 			<label name="cmc">Cout converti de mana</label>
 			<input class="w3-input w3-border w3-round-large" type="number" name="cmc" required>
@@ -31,7 +31,10 @@
 			<input class="w3-input w3-border w3-round-large" type="text" name="type" required>
 			
 			<label name="sub_types">Sous-types</label>
-			<input class="w3-input w3-border w3-round-large" type="text" name="sub_types" >
+			<input class="w3-input w3-border w3-round-large" type="text" name="sub_type" >
+			
+			<label name="color">Couleurs</label>
+			<input class="w3-input w3-border w3-round-large" type="text" name="color" >
 
 			<input type="submit" class="w3-button w3-light-green" value="Valider">
 
