unity in color design

--- a/ressources/layout/head.ejs
+++ b/ressources/layout/head.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <title> Magic-project v0 </title>
+    <title> Magic-project </title>
 
     <link rel='stylesheet' href='/ressource/stylesheets/style.css' />
 
