unity in color design

--- a/ressources/carte/template_var.ejs
+++ b/ressources/carte/template_var.ejs
@@ -43,7 +43,7 @@
 
 				<input class="w3-input w3-border w3-round-large" v-model="nom_carte" type="text">
 
-				<button @click="rechercher_carte()">Rechercher Cette carte</button>
+				<button @click.prevent="rechercher_carte()">Rechercher Cette carte</button>
 
 			</div>
 
