--- a/ressources/carte/template_var.ejs
+++ b/ressources/carte/template_var.ejs
@@ -31,7 +31,7 @@
 			
 			<label name="edition_code">Edition</label>
 			<select class="w3-select w3-border w3-round-large" :required="true" name="edition_code" >			
-				<option :selected="true">Choisir une edition</option>		
+				<option :selected="true" disabled>Choisir une edition</option>		
 				<option v-for="ed in editions" :key="ed.code" :value="ed.code">{{ed.edition_name}}</option>
 			</select>
 
@@ -41,15 +41,15 @@
 
 			<div class="w3-row">
 
-				<input class="w3-input w3-border w3-round-large w3-col s12 m12 l8" v-model="nom_carte" type="text">
+				<input class="w3-input w3-border w3-round-large w3-col s12 m12 l7" v-model="nom_carte" type="text">
 
-				<button class="w3-button w3-btn w3-border w3-block w3-col s12 m12 l4" @click.prevent="rechercher_carte()">Rechercher ce modele</button>
+				<button class="w3-button w3-btn w3-border w3-block w3-col s12 m12 l5" @click.prevent="rechercher_carte()">Rechercher ce modele</button>
 
 			</div>
 
-			<select class="w3-input w3-border w3-round-large" :required="true" name="carte_id" >
+			<select size="3" class="w3-input w3-border w3-round-large" :required="true" name="carte_id" >
 
-				<option :selected="true">Choisir une carte</option>
+				<option :selected="true" disabled>Choisir une carte</option>
 				<option v-for="c in carte_t" :key="c.carte_id" :value="c.carte_id">{{c.carte_name}}</option>
 
 			</select>
