--- a/ressources/carte/template_var.ejs
+++ b/ressources/carte/template_var.ejs
@@ -30,20 +30,30 @@
 
 			
 			<label name="edition_code">Edition</label>
-			<select class="w3-select w3-border w3-round-large" :required="true" name="edition_code" >			
+			<div class="w3-row">
+
+				<input class="w3-input w3-border w3-round-large w3-col s12 m4 l3" v-model="code_edition" type="text">
+				<input class="w3-input w3-border w3-round-large w3-col s12 m8 l7" v-model="nom_edition" type="text">
+
+				<button class="w3-button w3-btn w3-border w3-block w3-col s12 m12 l2" @click.prevent="ajouter_edition()">Ajouter une edition</button>
+
+			</div>
+			<select size="3" class="w3-select w3-border w3-round-large" :required="true" name="edition_code" >		
+
 				<option :selected="true" disabled>Choisir une edition</option>		
 				<option v-for="ed in editions" :key="ed.code" :value="ed.code">{{ed.edition_name}}</option>
+
 			</select>
 
 
 			
-			<label name="carte_id">Carte Type correspondant</label>
+			<label name="carte_id">Rechercher la carte type correspondante</label>
 
 			<div class="w3-row">
 
-				<input class="w3-input w3-border w3-round-large w3-col s12 m12 l7" v-model="nom_carte" type="text">
+				<input class="w3-input w3-border w3-round-large w3-col s12 m12 l8" v-model="nom_carte" type="text">
 
-				<button class="w3-button w3-btn w3-border w3-block w3-col s12 m12 l5" @click.prevent="rechercher_carte()">Rechercher ce modele</button>
+				<button class="w3-button w3-btn w3-border w3-block w3-col s12 m12 l4" @click.prevent="rechercher_carte()">Rechercher</button>
 
 			</div>
 
